ref: change url, config, and logs
