# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/v1/categories": {
+        "/dreams-api/v1/categories": {
             "get": {
                 "description": "Get all categories",
                 "produces": [
@@ -20,7 +20,7 @@
                 }
             }
         },
-        "/v1/dreams": {
+        "/dreams-api/v1/dreams": {
             "get": {
                 "description": "Get all dreams",
                 "produces": [
@@ -70,9 +70,9 @@
                 }
             }
         },
-        "/v1/dreams/private": {
+        "/dreams-api/v1/dreams/private": {
             "get": {
-                "description": "Get all dreams - inlcuding private",
+                "description": "Get all dreams - including private",
                 "produces": [
                     "application/json"
                 ],
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/v1/dreams/private/{dreamId}": {
+        "/dreams-api/v1/dreams/private/{dreamId}": {
             "get": {
                 "description": "Get one private dream",
                 "produces": [
@@ -108,7 +108,7 @@
                 }
             },
             "patch": {
-                "description": "Toggle visiblity of a dream",
+                "description": "Toggle visibility of a dream",
                 "produces": [
                     "application/json"
                 ],
@@ -119,7 +119,7 @@
                 }
             }
         },
-        "/v1/dreams/{dreamId}": {
+        "/dreams-api/v1/dreams/{dreamId}": {
             "get": {
                 "description": "Get one dream",
                 "produces": [
@@ -183,7 +183,7 @@
                 }
             }
         },
-        "/v1/dreams/{dreamId}/categories": {
+        "/dreams-api/v1/dreams/{dreamId}/categories": {
             "put": {
                 "description": "Add a category to a dream",
                 "produces": [
@@ -214,7 +214,7 @@
                 }
             }
         },
-        "/v1/dreams/{dreamId}/categories/{categoryId}": {
+        "/dreams-api/v1/dreams/{dreamId}/categories/{categoryId}": {
             "delete": {
                 "description": "Remove a category from a dream",
                 "produces": [
@@ -236,7 +236,7 @@
                 }
             }
         },
-        "/v1/dreams/{dreamId}/persons": {
+        "/dreams-api/v1/dreams/{dreamId}/persons": {
             "put": {
                 "description": "Add a person to a dream",
                 "produces": [
@@ -267,7 +267,7 @@
                 }
             }
         },
-        "/v1/dreams/{dreamId}/persons/{personId}": {
+        "/dreams-api/v1/dreams/{dreamId}/persons/{personId}": {
             "delete": {
                 "description": "Delete a person from a dream",
                 "produces": [
@@ -289,7 +289,7 @@
                 }
             }
         },
-        "/v1/persons": {
+        "/dreams-api/v1/persons": {
             "get": {
                 "description": "Get all persons",
                 "produces": [
@@ -305,7 +305,7 @@
                 }
             }
         },
-        "/v1/private/statistics": {
+        "/dreams-api/v1/private/statistics": {
             "get": {
                 "description": "Get count per category and person",
                 "produces": [
@@ -329,7 +329,7 @@
                 }
             }
         },
-        "/v1/statistics": {
+        "/dreams-api/v1/statistics": {
             "get": {
                 "description": "Get count per category and person",
                 "produces": [
